[gd_scene load_steps=5 format=3 uid="uid://0dcccq3kxyrq"]

[ext_resource type="Script" path="res://Scripts/player.gd" id="1_kln31"]
[ext_resource type="Script" path="res://Scripts/coverSystem.gd" id="2_pbdyh"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_kwtwf"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_frsl7"]
height = 1.2

[node name="Player" type="CharacterBody3D"]
script = ExtResource("1_kln31")

[node name="Standing_Coll_Shape" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
shape = SubResource("CapsuleShape3D_kwtwf")

[node name="Crouching_Coll_Shape" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.6, 0)
shape = SubResource("CapsuleShape3D_frsl7")
disabled = true

[node name="Head" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.8, 0)

[node name="Camera3D" type="Camera3D" parent="Head"]

[node name="RayCast3D" type="RayCast3D" parent="."]
target_position = Vector3(0, 2, 0)

[node name="Node3D" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.0284519, -0.0163493, -0.015488)
script = ExtResource("2_pbdyh")
width = 0.8

[node name="RayCast3DTopRight" type="RayCast3D" parent="Node3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.4, 2, 0)
target_position = Vector3(0, 0, -1)

[node name="RayCast3DTopLeft" type="RayCast3D" parent="Node3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.4, 2, 0)
target_position = Vector3(0, 0, -1)

[node name="RayCast3DBottomRight" type="RayCast3D" parent="Node3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.4, 0.1, 0)
target_position = Vector3(0, 0, -1)

[node name="RayCast3DBottomLeft" type="RayCast3D" parent="Node3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.4, 0.1, 0)
target_position = Vector3(0, 0, -1)
